--- a/Project.css
+++ b/Project.css
@@ -6,7 +6,7 @@ body{
 .body_section{
     padding : 3% 5% 1%;
 }
-
+/* modify */
   @font-face{
     font-family: "Lovely Home";
     src:local('Lovely Home'), 
