--- a/skill.css
+++ b/skill.css
@@ -17,7 +17,7 @@ body{
     url("Image/LovelyHome-9aBZ.ttf") format('truetype');
 
   }
-
+/* modify */
 .brand-name ,.navbar-light .navbar-brand{
       /* font-family: "Brush Script MT"; */
       /* margin-bottom: 3px; */
